fix(website): contrast issues

--- a/packages/website/src/styles.scss
+++ b/packages/website/src/styles.scss
@@ -4,10 +4,10 @@
 :root {
   --primary: #0078d4;
   --primary-light: #{color.scale(#0078d4, $lightness: 90%, $saturation: -40%)};
-  --primary-dark: #{color.scale(#0078d4, $lightness: -20%)};
+  --primary-dark: #{color.scale(#0078d4, $lightness: -20%, $saturation: +20%)};
   --accent: #c90040;
   --accent-light: #{color.scale(#c90040, $lightness: 90%, $saturation: -40%)};
-  --accent-dark: #{color.scale(#c90040, $lightness: -20%)};
+  --accent-dark: #{color.scale(#c90040, $lightness: -20%, $saturation: +20%)};
   --medium: #{color.mix(#0078d4, #00a1a1)};
   --medium-light: #{color.scale(color.mix(#0078d4, #00a1a1), $lightness: 90%, $saturation: -40%)};
   --accent-2: #006680;
