--- a/packages/website/src/theme/_common.scss
+++ b/packages/website/src/theme/_common.scss
@@ -207,7 +207,7 @@ pre {
 
 a {
   font-weight: 500;
-  color: var(--primary);
+  color: var(--primary-dark);
   text-decoration: none;
 
   &:hover {
